// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slot renders arrays of children 1`] = `
<slot>
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
  TEST
</slot>
`;

exports[`slot renders with accessKey="a,b,c,d" 1`] = `
<slot
  accessKey="a,b,c,d"
/>
`;

exports[`slot renders with autoCapitalize="characters" 1`] = `
<slot
  autoCapitalize="characters"
/>
`;

exports[`slot renders with autoCapitalize="none" 1`] = `
<slot
  autoCapitalize="none"
/>
`;

exports[`slot renders with autoCapitalize="off" 1`] = `
<slot
  autoCapitalize="off"
/>
`;

exports[`slot renders with autoCapitalize="on" 1`] = `
<slot
  autoCapitalize="on"
/>
`;

exports[`slot renders with autoCapitalize="sentences" 1`] = `
<slot
  autoCapitalize="sentences"
/>
`;

exports[`slot renders with autoCapitalize="words" 1`] = `
<slot
  autoCapitalize="words"
/>
`;

exports[`slot renders with children 1`] = `
<slot>
  TEST
</slot>
`;

exports[`slot renders with className="foo bar baz" 1`] = `
<slot
  className="foo bar baz"
/>
`;

exports[`slot renders with contentEditable="false" 1`] = `
<slot
  contentEditable="false"
/>
`;

exports[`slot renders with contentEditable="true" 1`] = `
<slot
  contentEditable="true"
/>
`;

exports[`slot renders with dir="auto" 1`] = `
<slot
  dir="auto"
/>
`;

exports[`slot renders with dir="ltr" 1`] = `
<slot
  dir="ltr"
/>
`;

exports[`slot renders with dir="rtl" 1`] = `
<slot
  dir="rtl"
/>
`;

exports[`slot renders with draggable="false" 1`] = `
<slot
  draggable="false"
/>
`;

exports[`slot renders with draggable="true" 1`] = `
<slot
  draggable="true"
/>
`;

exports[`slot renders with empty attributes 1`] = `<slot />`;

exports[`slot renders with hidden=false 1`] = `
<slot
  hidden={false}
/>
`;

exports[`slot renders with hidden=true 1`] = `
<slot
  hidden={true}
/>
`;

exports[`slot renders with id="TEST" 1`] = `
<slot
  id="TEST"
/>
`;

exports[`slot renders with inputMode="decimal" 1`] = `
<slot
  inputMode="decimal"
/>
`;

exports[`slot renders with inputMode="email" 1`] = `
<slot
  inputMode="email"
/>
`;

exports[`slot renders with inputMode="none" 1`] = `
<slot
  inputMode="none"
/>
`;

exports[`slot renders with inputMode="numeric" 1`] = `
<slot
  inputMode="numeric"
/>
`;

exports[`slot renders with inputMode="search" 1`] = `
<slot
  inputMode="search"
/>
`;

exports[`slot renders with inputMode="tel" 1`] = `
<slot
  inputMode="tel"
/>
`;

exports[`slot renders with inputMode="text" 1`] = `
<slot
  inputMode="text"
/>
`;

exports[`slot renders with inputMode="url" 1`] = `
<slot
  inputMode="url"
/>
`;

exports[`slot renders with is="foo" 1`] = `
<slot
  is="foo"
/>
`;

exports[`slot renders with itemID="https://google.com/" 1`] = `
<slot
  itemID="https://google.com/"
/>
`;

exports[`slot renders with itemProp="https://google.com/" 1`] = `
<slot
  itemProp="https://google.com/"
/>
`;

exports[`slot renders with itemRef="foo bar" 1`] = `
<slot
  itemRef="foo bar"
/>
`;

exports[`slot renders with itemScope=false 1`] = `
<slot
  itemScope={false}
/>
`;

exports[`slot renders with itemScope=true 1`] = `
<slot
  itemScope={true}
/>
`;

exports[`slot renders with itemType="https://google.com/" 1`] = `
<slot
  itemType="https://google.com/"
/>
`;

exports[`slot renders with lang="" 1`] = `
<slot
  lang=""
/>
`;

exports[`slot renders with lang="es-419" 1`] = `
<slot
  lang="es-419"
/>
`;

exports[`slot renders with name="TEST" 1`] = `
<slot
  name="TEST"
/>
`;

exports[`slot renders with slot="TEST" 1`] = `
<slot
  slot="TEST"
/>
`;

exports[`slot renders with spellCheck="false" 1`] = `
<slot
  spellCheck="false"
/>
`;

exports[`slot renders with spellCheck="true" 1`] = `
<slot
  spellCheck="true"
/>
`;

exports[`slot renders with style={"color":"#000000"} 1`] = `
<slot
  style={
    Object {
      "color": "#000000",
    }
  }
/>
`;

exports[`slot renders with tabIndex=1 1`] = `
<slot
  tabIndex={1}
/>
`;

exports[`slot renders with title="TEST" 1`] = `
<slot
  title="TEST"
/>
`;

exports[`slot renders with translate="no" 1`] = `
<slot
  translate="no"
/>
`;

exports[`slot renders with translate="yes" 1`] = `
<slot
  translate="yes"
/>
`;

exports[`slot renders without attributes 1`] = `<slot />`;
